--- a/styles/main.css
+++ b/styles/main.css
@@ -23,3 +23,18 @@ a {
     text-decoration: none;
     z-index: 1000000000000000000000000000;
 }
+
+#video {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: -100;
+    -webkit-transform: translateX(-50%) translateY(-50%);
+    transform: translateX(-50%) translateY(-50%);
+    background: no-repeat;
+    background-size: cover;
+}
